# database-systems-complete-book-solutions

./: .gitignore  CMakeLists.txt  Lib.sty  README.md  clean.sh  main.tex
src/chapter_1/: ch1.tex
src/chapter_10/: ch10.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex
src/chapter_11/: ch11.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex
src/chapter_12/: ch12.tex  sec1.tex  sec2.tex  sec3.tex
src/chapter_13/: ch13.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex  sec8.tex
src/chapter_14/: ch14.tex  sec1.tex  sec2.tex
src/chapter_15/: ch15.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex
src/chapter_16/: ch16.tex  sec1.tex  sec2.tex  sec3.tex
src/chapter_18/: ch18.tex  sec1.tex  sec2.tex  sec3.tex
src/chapter_2/: ch2.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex
src/chapter_3/: ch3.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex
src/chapter_4/: ch4.tex  sec1.tex  sec10.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex  sec8.tex  sec9.tex
src/chapter_5/: ch5.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex
src/chapter_6/: ch6.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex
src/chapter_7/: ch7.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex
src/chapter_8/: ch8.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex
src/chapter_9/: ch9.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex  sec5.tex  sec6.tex  sec7.tex
